--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="favorite_title">Favorite</string>
     <string name="movie_title">Movie</string>
     <string name="avenger">Avenger</string>
+    <string name="movie_detail">Movie Detail</string>
 </resources>
